--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@massive.com/client-js": "^10.3.0",
     "@prisma/client": "^5.10.0",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.1.1",
