feat: Add Dockerfile, .dockerignore, and an app service to docker-compose.yml to containerize the application and externalize database credentials.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:16-alpine
     restart: always
     environment:
-      - POSTGRES_USER=unitrack
-      - POSTGRES_PASSWORD=unitrack_pass
-      - POSTGRES_DB=unitrack_db
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
@@ -17,6 +17,20 @@ services:
     restart: always
     ports:
       - "6379:6379"
+
+  app:
+    build: .
+    restart: always
+    ports:
+      - "3000:3000"
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}?schema=public
+      - REDIS_URL=redis://redis:6379
+    depends_on:
+      - db
+      - redis
 
 volumes:
   pgdata:
